force-app/main/default/objects/UnitType__c/UnitType__c.object-meta.xml
<CustomObject>
    <label>Unit Type</label>
    <nameField>
        <label>UnitType Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>