force-app/main/default/objects/UnitType__c/fields/LayoutType__c.field-meta.xml
<CustomField>
    <fullName>LayoutType__c</fullName>
    <label>Layout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1BR</fullName>
            </value>
            <value>
                <fullName>2BR</fullName>
            </value>
            <value>
                <fullName>2BR Large</fullName>
            </value>
            <value>
                <fullName>3BR</fullName>
            </value>
            <value>
                <fullName>3BR Large</fullName>
            </value>
            <value>
                <fullName>4BR</fullName>
            </value>
            <value>
                <fullName>4BR-Delux</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>