force-app/main/default/objects/UnitType__c/fields/Unit_Layout__c.field-meta.xml
<CustomField>
    <fullName>Unit_Layout__c</fullName>
    <label>Unit Layout</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Entrance</fullName>
            </value>
            <value>
                <fullName>Living Room</fullName>
            </value>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
            <value>
                <fullName>Bedroom 2</fullName>
            </value>
            <value>
                <fullName>Bedroom 3</fullName>
            </value>
            <value>
                <fullName>Bedroom 4</fullName>
            </value>
            <value>
                <fullName>Master Bathroom</fullName>
            </value>
            <value>
                <fullName>Bathroom 2</fullName>
            </value>
            <value>
                <fullName>Bathroom 3</fullName>
            </value>
            <value>
                <fullName>Bathroom 4</fullName>
            </value>
            <value>
                <fullName>Kitchenette</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Terrace/Balcony</fullName>
            </value>
            <value>
                <fullName>Staircase</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Open Space (Bareshell)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>