force-app/main/default/objects/UnitType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>LayoutType__c</columns>
    <columns>Unit_Layout__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>